Enable periodic run of build against JDK 11 Add build for JDK 12, but still disabled because there is no JDK 12 in CI availalbe yet
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1839198 13f79535-47bb-0310-9956-ffa450edef68